--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 /* @import 'bootstrap/dist/css/bootstrap.min.css'; */
 @import "~antd/dist/antd.dark.css";
 
+.pointerCursor {
+  cursor: pointer;
+}
+
 /* ANIMATIONS */
 
 .lds-ring {
